--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "engines": {"node": "22.2.0"},
   "name": "home-stay",
   "version": "1.0.0",
   "description": "",
@@ -10,8 +11,12 @@
   "author": "Arsh Gangani",
   "license": "ISC",
   "dependencies": {
+    "@mapbox/mapbox-sdk": "^0.16.0",
     "body-parser": "^1.20.2",
+    "cloudinary": "^1.21.0",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
     "express": "^4.19.2",
@@ -19,6 +24,8 @@
     "joi": "^17.13.1",
     "method-override": "^3.0.0",
     "mongoose": "^8.4.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0"
